# tfl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  tag-release.yml
contrib/: tfl-wrapper.sh  tfl.desktop
src/: action.rs  app.rs  config.rs  date_filter.rs  event.rs  favorites.rs  git.rs  icons.rs  main.rs  opener.rs  saved_searches.rs  theme.rs
src/fs/: entry.rs  mod.rs  ops.rs  properties.rs  size_filter.rs  tree.rs
src/preview/: archive.rs  blame.rs  diff.rs  directory.rs  hex.rs  image.rs  markdown.rs  metadata.rs  mod.rs  pdf.rs  structured.rs  text.rs
src/preview/themes/: catppuccin-mocha.tmTheme
src/ui/: breadcrumb.rs  chmod.rs  compress.rs  error.rs  favorites.rs  file_tree.rs  help.rs  mod.rs  open_with.rs  preview.rs  properties.rs  saved_searches.rs  status_bar.rs
