[package]
name = "tfl"
version = "0.3.0"
edition = "2024"
description = "Terminal file explorer with vim-style navigation and rich file previews"
license = "MIT"
repository = "https://github.com/i-doll/tfl"

[dependencies]
regex = "1.10"
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
syntect = "5.3"
infer = "0.19"
ignore = "0.4"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2"
clipboard-anywhere = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6"
open = "5"
notify = "8"
kamadak-exif = "0.5"
git2 = "0.20"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.5"
xz2 = "0.1"
globset = "0.4.18"
pulldown-cmark = "0.13"
users = "0.11"

[profile.release]
lto = true
strip = true
